# micromagneticdata

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  index.ipynb  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py
.github/: environment.yml
.github/workflows/: publish.yml
binder/: environment.yml
dev/: A_DMI_1d.ipynb  FFT Development.ipynb  odt-visualisation.ipynb
docker/: Dockerfile
docs/: api-reference.rst  conf.py  data.rst  dev-test.ipynb  documentation.ipynb  drive.rst  index.rst  interactive_plotting.ipynb  tutorials.rst
docs/ipynb/: dev-test.ipynb  first_notebook.ipynb  index.ipynb  installation-testing-update.ipynb  odt_visualisation.ipynb  test-notebook.ipynb
micromagneticdata/: __init__.py  abstract_drive.py  analysis.py  combined_drive.py  data.py  drive.py  drive1.py  micromagneticdata.py  mode_trajectory.py  mumax3drive.py  oommfdrive.py  ringdown_analysis.py  util.py
micromagneticdata/tests/: generate_test_data.py  make_test_sample.py  test_combined_drive.py  test_data.py  test_drive.py  test_micromagneticdata.py
micromagneticdata/tests/test_files/: generate_simulation_files.py
micromagneticdata/tests/test_sample/drive-0/: info.json  test_sample-Oxs_TimeDriver-Magnetization-00-0000006.omf  test_sample-Oxs_TimeDriver-Magnetization-01-0000008.omf  test_sample-Oxs_TimeDriver-Magnetization-02-0000010.omf  test_sample-Oxs_TimeDriver-Magnetization-03-0000012.omf  test_sample-Oxs_TimeDriver-Magnetization-04-0000014.omf  test_sample-Oxs_TimeDriver-Magnetization-05-0000016.omf  test_sample-Oxs_TimeDriver-Magnetization-06-0000018.omf  test_sample-Oxs_TimeDriver-Magnetization-07-0000020.omf  test_sample-Oxs_TimeDriver-Magnetization-08-0000022.omf  test_sample-Oxs_TimeDriver-Magnetization-09-0000024.omf  test_sample-Oxs_TimeDriver-Magnetization-10-0000026.omf  test_sample-Oxs_TimeDriver-Magnetization-11-0000028.omf  test_sample-Oxs_TimeDriver-Magnetization-12-0000030.omf  test_sample-Oxs_TimeDriver-Magnetization-13-0000032.omf  test_sample-Oxs_TimeDriver-Magnetization-14-0000034.omf  test_sample.mif  test_sample.odt  (+10 more)
(+1074 files in other folders)
